Refactor media-stack_pb.yml for SSH key and paths
Updated SSH private key lookup path and removed duplicate base_media_path entry. Removed pre-task for writing SSH key to file.

--- a/ansible/media-stack/media-stack_pb.yml
+++ b/ansible/media-stack/media-stack_pb.yml
@@ -5,9 +5,8 @@
   vars:
     vault_addr: "http://192.168.50.169:8200"
     vault_token: "{{ lookup('env', 'VAULT_TOKEN') }}"
-    ssh_private_key: "{{ lookup('community.hashi_vault.hashi_vault', 'secret=secret/ssh_keys/media-stack_worker:key=private token=' + vault_token + ' url=' + vault_addr) }}"
-    base_media_path: /mnt/media
-    base_media_path: /mnt/media
+    ssh_private_key: "{{ lookup('community.hashi_vault.hashi_vault', 'secret=secret/data/ssh_keys/media-stack_worker:private token=' + vault_token + ' url=' + vault_addr) }}"
+    base_media_path: /mnt/media  # Removed duplicate
     timezone: "UTC"
     media_containers:
       - name: sonarr
@@ -56,15 +55,6 @@
           - "{{ base_media_path }}/config/jellyfin:/config"
           - "{{ base_media_path }}/tv:/data/tvshows"
           - "{{ base_media_path }}/movies:/data/movies"
-          
-  pre_tasks:
-    - name: Write SSH private key from Vault to file
-      copy:
-        content: "{{ ssh_private_key }}"
-        dest: "/tmp/ansible_media-stack_worker_id_ed25519"
-        mode: "0600"
-      delegate_to: localhost
-      run_once: true
 
   tasks:
     - name: Install required system packages
@@ -122,7 +112,7 @@
         - "{{ base_media_path }}/config/jellyfin"
 
     - name: Deploy media stack containers
-      docker_container:
+      community.docker.docker_container:
         name: "{{ item.name }}"
         image: "{{ item.image }}"
         state: started
@@ -163,4 +153,3 @@
           Service on port {{ item.item }}: 
           {% if item.failed is defined and item.failed %}FAILED{% else %}OK{% endif %}
       loop: "{{ service_check.results }}"
-
