--- a/inventory.yml
+++ b/inventory.yml
@@ -3,3 +3,5 @@ all:
     media-stack_worker:
       ansible_host: 192.168.50.200
       ansible_user: root
+      ansible_ssh_private_key_file: "{{ lookup('env', 'HOME') }}/.ssh/media-stack_worker_id_ed25519"
+      ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
