--- a/.github/workflows/infra-pipeline.yml
+++ b/.github/workflows/infra-pipeline.yml
@@ -26,11 +26,12 @@ jobs:
           cd $GITHUB_WORKSPACE
           ls -la
 
-      - name: Install Vault CLI
+      - name: Install Vault CLI (manual)
         run: |
-          curl -fsSL https://apt.releases.hashicorp.com/gpg | gpg --dearmor | tee /usr/share/keyrings/hashicorp-archive-keyring.gpg
-          echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/hashicorp.list
-          apt-get update && apt-get install -y vault
+          curl -fsSL https://releases.hashicorp.com/vault/1.21.0/vault_1.21.0_linux_amd64.zip -o vault.zip
+          apt-get update && apt-get install -y unzip
+          unzip vault.zip -d /usr/local/bin
+          chmod +x /usr/local/bin/vault
           vault --version
       
       - name: Generate SSH Key if not present
