--- a/.github/workflows/infra-pipeline.yml
+++ b/.github/workflows/infra-pipeline.yml
@@ -47,19 +47,33 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      - name: Debug workspace layout
+        run: |
+          pwd
+          ls -l
+          ls -l terraform
+          ls -l terraform/media-stack
       - name: Install Terraform
         run: |
           apt-get update
           apt-get install -y wget unzip
-          rm -rf terraform 
+          rm -rf terraform
           wget https://releases.hashicorp.com/terraform/1.6.4/terraform_1.6.4_linux_amd64.zip
-          ls -lh terraform_1.6.4_linux_amd64.zip
-          file terraform_1.6.4_linux_amd64.zip
           unzip -o terraform_1.6.4_linux_amd64.zip
-          ls -lh
           mv terraform /usr/local/bin/
-          ls -lh /usr/local/bin/terraform
           terraform -version
+      - name: Terraform Init
+        run: |
+          cd terraform/media-stack
+          terraform init
+      - name: Terraform Plan
+        run: |
+          cd terraform/media-stack
+          terraform plan
+      - name: Terraform Apply
+        run: |
+          cd terraform/media-stack
+          terraform apply -auto-approve
       - name: Terraform Init
         run: |
           cd terraform/media-stack
