--- a/.github/workflows/infra-pipeline.yml
+++ b/.github/workflows/infra-pipeline.yml
@@ -63,29 +63,16 @@ jobs:
           mv terraform /usr/local/bin/
           terraform -version
       - name: Terraform Init
-        run: |
-          cd terraform/media-stack
-          terraform init
+        working-directory: terraform/media-stack
+        run: terraform init
+
       - name: Terraform Plan
-        run: |
-          cd terraform/media-stack
-          terraform plan
+        working-directory: terraform/media-stack
+        run: terraform plan
+
       - name: Terraform Apply
-        run: |
-          cd terraform/media-stack
-          terraform apply -auto-approve
-      - name: Terraform Init
-        run: |
-          cd terraform/media-stack
-          terraform init
-      - name: Terraform Plan
-        run: |
-          cd terraform/media-stack
-          terraform plan
-      - name: Terraform Apply
-        run: |
-          cd terraform/media-stack
-          terraform apply -auto-approve
+        working-directory: terraform/media-stack
+        run: terraform apply -auto-approve
 
   ansible:
     needs: terraform
