--- a/.github/workflows/infra-pipeline.yml
+++ b/.github/workflows/infra-pipeline.yml
@@ -62,14 +62,23 @@ jobs:
           unzip -o terraform_1.6.4_linux_amd64.zip
           mv terraform /usr/local/bin/
           terraform -version
+      - name: Print pwd
+        run: pwd    
+        
       - name: Terraform Init
         working-directory: terraform/media-stack
         run: terraform init
-
+        
+      - name: Print pwd
+        run: pwd    
+        
       - name: Terraform Plan
         working-directory: terraform/media-stack
         run: terraform plan
 
+      - name: Print pwd
+        run: pwd    
+        
       - name: Terraform Apply
         working-directory: terraform/media-stack
         run: terraform apply -auto-approve
