--- a/.github/workflows/infra-pipeline.yml
+++ b/.github/workflows/infra-pipeline.yml
@@ -41,18 +41,20 @@ jobs:
         env:
           VAULT_TOKEN: "root"
 
-  terraform:
-    needs: secrets
+terraform:
+  needs: secrets
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+      uses: actions/checkout@v4
+
       - name: Debug workspace layout
         run: |
           pwd
           ls -l
           ls -l terraform
           ls -l terraform/media-stack
+
       - name: Install Terraform
         run: |
           apt-get update
@@ -62,26 +64,27 @@ jobs:
           unzip -o terraform_1.6.4_linux_amd64.zip
           mv terraform /usr/local/bin/
           terraform -version
-      - name: Print pwd
-        run: pwd    
-        
-      - name: Terraform Init
-        working-directory: terraform/media-stack
-        run: terraform init
-        
-      - name: Print pwd
-        run: pwd    
-        
-      - name: Terraform Plan
-        working-directory: terraform/media-stack
-        run: terraform plan
 
-      - name: Print pwd
-        run: pwd    
-        
+      - name: Debug pwd before Terraform steps
+        run: |
+          pwd
+          ls -l
+          ls -l terraform/media-stack
+
+      - name: Terraform Init
+        run: |
+          cd terraform/media-stack
+          terraform init
+
+      - name: Terraform Plan
+        run: |
+          cd terraform/media-stack
+          terraform plan
+
       - name: Terraform Apply
-        working-directory: terraform/media-stack
-        run: terraform apply -auto-approve
+        run: |
+          cd terraform/media-stack
+          terraform apply -auto-approve
 
   ansible:
     needs: terraform
