Improve Terraform installation script

--- a/.github/workflows/infra-pipeline.yml
+++ b/.github/workflows/infra-pipeline.yml
@@ -59,7 +59,7 @@ jobs:
         run: |
           apt-get update
           apt-get install -y wget unzip
-          rm -rf terraform
+          if [ -f terraform ]; then rm terraform; fi
           wget https://releases.hashicorp.com/terraform/1.6.4/terraform_1.6.4_linux_amd64.zip
           unzip -o terraform_1.6.4_linux_amd64.zip
           mv terraform /usr/local/bin/
