--- a/.github/workflows/infra-pipeline.yml
+++ b/.github/workflows/infra-pipeline.yml
@@ -59,11 +59,13 @@ jobs:
         run: |
           apt-get update
           apt-get install -y wget unzip
-          if [ -f terraform ]; then rm terraform; fi
+          mkdir -p /tmp/terraform-bin
+          cd /tmp/terraform-bin
           wget https://releases.hashicorp.com/terraform/1.6.4/terraform_1.6.4_linux_amd64.zip
-          unzip -o terraform_1.6.4_linux_amd64.zip
+          unzip terraform_1.6.4_linux_amd64.zip
           mv terraform /usr/local/bin/
           terraform -version
+          cd -
 
       - name: Debug pwd before Terraform steps
         run: |
