--- a/.github/workflows/infra-pipeline.yml
+++ b/.github/workflows/infra-pipeline.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches: [main]
     paths:
+      - 'ansible/media-stack/tailscale.yml'
       - 'terraform/**'
       - 'ansible/**'
   pull_request:
@@ -18,6 +19,28 @@ env:
   TF_VAR_proxmox_password: "Tomtom22!"
 
 jobs:
+  tailscale:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Install Ansible and dependencies (virtualenv)
+        run: |
+          apt-get update
+          apt-get install -y python3-pip python3-venv jq
+          python3 -m venv /tmp/ansible-venv
+          source /tmp/ansible-venv/bin/activate
+          pip install --upgrade pip wheel
+          pip install ansible
+
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Run Tailscale Ansible Playbook
+        env:
+          TAILSCALE_AUTHKEY: ${{ env.TAILSCALE_AUTHKEY }} # inherited from .env.local/act
+        run: |
+          source /tmp/ansible-venv/bin/activate
+          ansible-playbook -i inventory.yml ansible/media-stack/tailscale.yml
+
   secrets:
     runs-on: ubuntu-latest
     steps:
