--- a/inventory.yml
+++ b/inventory.yml
@@ -5,3 +5,4 @@ all:
       ansible_user: root
       ansible_ssh_private_key_file: "{{ lookup('env', 'HOME') }}/.ssh/media-stack_worker_id_ed25519"
       ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
+      ansible_python_interpreter: /usr/bin/python3
