--- a/.github/workflows/media-stack_pipeline.yml
+++ b/.github/workflows/media-stack_pipeline.yml
@@ -68,7 +68,9 @@ jobs:
         env:
           VAULT_ADDR: http://192.168.50.169:8200
           VAULT_TOKEN: root
-          TF_VAR_vault_token: root
+          TF_VAR_proxmox_api_url: http://192.168.50.2:8006/api2/json
+          TF_VAR_proxmox_user: root@pam
+          TF_VAR_proxmox_password: Tomtom22!
         run: |
           cd terraform/dev/media-stack
           terraform init
@@ -76,6 +78,9 @@ jobs:
         env:
           VAULT_ADDR: http://192.168.50.169:8200
           VAULT_TOKEN: root
+          TF_VAR_proxmox_api_url: http://192.168.50.2:8006/api2/json
+          TF_VAR_proxmox_user: root@pam
+          TF_VAR_proxmox_password: Tomtom22!
           TF_VAR_vault_token: root
         run: |
           cd terraform/dev/media-stack
@@ -84,6 +89,9 @@ jobs:
         env:
           VAULT_ADDR: http://192.168.50.169:8200
           VAULT_TOKEN: root
+          TF_VAR_proxmox_api_url: http://192.168.50.2:8006/api2/json
+          TF_VAR_proxmox_user: root@pam
+          TF_VAR_proxmox_password: Tomtom22!
           TF_VAR_vault_token: root
         run: |
           cd terraform/dev/media-stack
