--- a/.github/workflows/media-stack_pipeline.yml
+++ b/.github/workflows/media-stack_pipeline.yml
@@ -131,8 +131,9 @@ jobs:
           cat $HOME/.ssh/media-stack-worker_id_ed25519 || true
       - name: Check SSH port connectivity
         run: |
-          apt-get install -y netcat
-          nc -zv 192.168.50.200 22
+          apt-get update
+          apt-get install -y netcat-openbsd
+          nc -zv 192.168.50.200 22 || echo "Port 22 unreachable"
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Run Ansible playbook
