Add step to generate Vault secrets in pipeline
Added a step to generate Vault secrets for the network VM.

--- a/.github/workflows/network-vm_pipeline.yml
+++ b/.github/workflows/network-vm_pipeline.yml
@@ -51,6 +51,11 @@ jobs:
     needs: terraform
     runs-on: ubuntu-latest
     steps:
+      - name: Generate Vault secrets for network VM
+        run: |
+          chmod +x scripts/dev/network-vm/vault-generate-secrets.sh
+          scripts/dev/network-vm/vault-generate-secrets.sh
+          
       - name: Install Ansible and Python deps
         run: |
           sudo apt-get update
