--- a/ansible/dev/network-vm/roles/tailscale/tasks/main.yml
+++ b/ansible/dev/network-vm/roles/tailscale/tasks/main.yml
@@ -1,7 +1,21 @@
+- name: Add Tailscale official APT repository key
+  apt_key:
+    url: https://pkgs.tailscale.com/stable/ubuntu/focal.noarmor.gpg
+    state: present
+
+- name: Add Tailscale official APT repository
+  apt_repository:
+    repo: "deb https://pkgs.tailscale.com/stable/ubuntu focal main"
+    state: present
+
+- name: Update apt cache after adding repo
+  apt:
+    update_cache: yes
+
 - name: Install Tailscale
   apt:
     name: tailscale
-    update_cache: yes
+    state: present
 
 - name: Authenticate with Tailscale
   command: "tailscale up --authkey={{ tailscale_authkey }}"
