--- a/.github/workflows/network-vm_pipeline.yml
+++ b/.github/workflows/network-vm_pipeline.yml
@@ -86,6 +86,19 @@ jobs:
           chmod +x scripts/dev/network-vm/vault-generate-secrets.sh
           scripts/dev/network-vm/vault-generate-secrets.sh
 
+      - name: Check for SSH key file and path
+        run: |
+          echo "HOME is $HOME"
+          ls -l $HOME/.ssh/
+          cat $HOME/.ssh/media-stack_worker_id_ed25519 || true
+          cat $HOME/.ssh/media-stack-worker_id_ed25519 || true
+          
+      - name: Check SSH port connectivity
+        run: |
+          apt-get update
+          apt-get install -y netcat-openbsd
+          nc -zv 192.168.50.200 22 || echo "Port 22 unreachable"
+
       - name: Run Ansible playbook
         env:
           VAULT_ADDR: http://192.168.50.169:8200
