Add wait task for tailscaled service activation
Added a task to wait for tailscaled to be active before authentication.

--- a/ansible/dev/network-vm/roles/tailscale/tasks/main.yml
+++ b/ansible/dev/network-vm/roles/tailscale/tasks/main.yml
@@ -22,7 +22,14 @@
     name: tailscaled
     enabled: yes
     state: started
-    
+
+- name: Wait for tailscaled to be active
+  command: systemctl is-active tailscaled
+  register: tailscaled_status
+  retries: 10
+  delay: 3
+  until: tailscaled_status.stdout == "active"
+  
 - name: Authenticate with Tailscale
   command: "tailscale up --authkey={{ tailscale_authkey }}"
   args:
